--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>spring security</title>
+    <link rel="stylesheet" href="/css/base.css" />
+    <script type="application/javascript" src="/js/base.js"></script>
 </head>
 <body>
 <div th:if="${param.error}">
